# strings

./: Makefile  README.md  STRINGS.1.md  STRINGS.3.md  setup.cfg
man/: strings.1  strings.3
src/strings/: Makefile  main.py
tests/: utf-8.txt
