[metadata]
name = pnu_strings
description = print the strings of printable characters in files
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.1.3
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/strings/
project_urls =
    Bug Tracker = https://github.com/HubTou/strings/issues
keywords = pnu-project, unix
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    strings = strings:main

[options.data_files]
man/man1 = 
    man/strings.1.gz
man/man3 = 
    man/strings.3.gz

